Set a default lat/lon in .env-sample

--- a/.env-sample
+++ b/.env-sample
@@ -7,5 +7,5 @@ export FIREHOSE_USERNAME=
 export FIREHOSE_PASSWORD=
 
 # Enter the position that you want to monitor aircraft around
-export LATITUDE=
-export LONGITUDE=
+export LATITUDE=42.40245
+export LONGITUDE=-70.99290
